Fix menu collapse

--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -2,10 +2,6 @@
     cursor: pointer;
 }
 
-.navbar {
-    height: 90px;
-}
-
 .navbar-toggler-icon {
     size: 150%;
 }   
